--- a/Test Project/my-frontend/index.html
+++ b/Test Project/my-frontend/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="utf-8" />
+    <!-- Mobile viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- SEO & PWA meta -->
+    <meta
+      name="description"
+      content="Tasks App frontend built with Vite, React, TypeScript and Tailwind CSS"
+    />
+    <!-- Favicon -->
+    <link rel="icon" href="/vite.svg" />
+    <title>Tasks App • MyFrontend</title>
   </head>
   <body>
+    <!-- React will hydrate into this div -->
     <div id="root"></div>
+    <!-- Entry point -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
